--- a/ngix/pikatrading.conf
+++ b/ngix/pikatrading.conf
@@ -1,33 +1,31 @@
-upstream pikatrading_app_server{
-	server unix:/webapps/pikatrading/env/run/gunicorn.sock fail_timeout=0;
+upstream pikatrading_app_server {
+    server unix:///code/pikatrading/uwsgi_app.sock fail_timeout=0;
 }
 
-server{
-	listen 80;
-	server_name pikatrading.com;
+server {
+    listen 80;
+    server_name pikatrading.com;
 
-	client_max_body_size 4G;
-	access_log /webapps/pikatrading/logs/nginx-pika-access.log;
-	error_log /webapps/pikatrading/logs/nginx-pika-error.log;
+    client_max_body_size 4G;
+    access_log /var/log/nginx/pikatrading-access.log;
+    error_log /var/log/nginx/pikatrading-error.log;
 
-	location /static/ {
-		alias /webapps/pikatrading/Pikatrading/pikatrading/static/;
-	}
-	location /media/ {
-		alias /webapps/pikatrading/Pikatrading/pikatrading/media/;
-	}
+    location /static/ {
+        alias /code/pikatrading/static/;
+    }
 
-	location / {
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    location /media/ {
+        alias /code/pikatrading/media/;
+    }
 
-		proxy_set_header Host $http_host;
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
 
-		proxy_redirect off;
-
-		if (!-f $request_filename){
-			proxy_pass http://pikatrading_app_server;
-		}
-	}
-
+        if (!-f $request_filename) {
+            proxy_pass http://pikatrading_app_server;
+            break;
+        }
+    }
 }
-
