--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -1,42 +1,31 @@
-# upstream for uWSGI
-upstream uwsgi_app {
-    server unix:/code/pikatrading/uwsgi_app.sock;
+upstream pikatrading_app_server {
+    server unix:///code/pikatrading/uwsgi_app.sock fail_timeout=0;
 }
 
 server {
     listen 80;
-    server_name pikatrading.com www.pikatrading.com;
-    
-    # Required for Let's Encrypt domain verification
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+    server_name pikatrading.com;
 
-    # Redirect all HTTP traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen  443 ssl;
-    server_name pikatrading.com www.pikatrading.com;
-    
-    ssl_certificate /etc/letsencrypt/live/pikatrading.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/pikatrading.com/privkey.pem;
-    
-    error_log    stderr warn;
-    access_log   /dev/stdout main;
-
-    location / {
-        include      /etc/nginx/uwsgi_params;
-        uwsgi_pass   uwsgi_app;
-    }
+    client_max_body_size 4G;
+    access_log /var/log/nginx/pikatrading-access.log;
+    error_log /var/log/nginx/pikatrading-error.log;
 
     location /static/ {
         alias /code/pikatrading/static/;
     }
+
     location /media/ {
         alias /code/pikatrading/media/;
+    }
+
+    location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+
+        if (!-f $request_filename) {
+            proxy_pass http://pikatrading_app_server;
+            break;
+        }
     }
 }
