--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,8 @@ services:
 
     restart: always
     volumes:
-      - .:/code:rw
-    tmpfs:
-      - /code/pikatrading:uid=1000,gid=33,mode=775
+      - ./pikatrading/media:/code/pikatrading/media:rw
+      - ./pikatrading/static:/code/pikatrading/static:rw
     environment:
       - PYTHONPATH=/code/pikatrading
       - DJANGO_SETTINGS_MODULE=pikatrading.settings.prod
@@ -40,8 +39,8 @@ services:
     restart: always
     volumes:
       - ./config/nginx/default.conf.template:/etc/nginx/templates/default.conf.template:ro
-      - .:/code:ro
-      - /code/pikatrading:/code/pikatrading:rw
+      - ./pikatrading/static:/code/pikatrading/static:ro
+      - ./pikatrading/media:/code/pikatrading/media:ro
     ports:
       - "80:80"
     command: nginx -g 'daemon off;'
@@ -71,7 +70,8 @@ services:
     working_dir: /code/pikatrading
     command: ["/bin/sh", "-c", "celery -A pikatrading worker -l info --pool=solo & celery -A pikatrading beat --loglevel=info"]
     volumes:
-      - .:/code:rw
+      - ./pikatrading/media:/code/pikatrading/media:rw
+      - ./pikatrading/static:/code/pikatrading/static:rw
     environment:
       - PYTHONPATH=/code/pikatrading
       - DJANGO_SETTINGS_MODULE=pikatrading.settings.prod
