--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,9 +1,10 @@
 [uwsgi]
-socket=/code/pikatrading/uwsgi_app.sock
-chdir = /code/pikatrading/
-module=pikatrading.wsgi:application
-master=true
-chmod-socket=666
-uid=1000
-gid=www-data
-vacuum=true
+socket = /code/run/uwsgi.sock
+chdir = /code/pikatrading
+module = pikatrading.wsgi:application
+master = true
+chmod-socket = 664
+uid = 1000
+gid = 33
+vacuum = true
+processes = 1
