--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -8,3 +8,17 @@ uid = 1000
 gid = 33
 vacuum = true
 processes = 1
+
+# Debug settings
+py-autoreload = 1
+buffer-size = 32768
+harakiri = 60
+enable-threads = true
+
+# Logging
+disable-logging = false
+log-4xx = true
+log-5xx = true
+log-slow = true
+log-date = true
+logto = /dev/stdout
