--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -1,14 +1,12 @@
-upstream pikatrading_app_server {
-    server unix:///code/run/uwsgi.sock fail_timeout=0;
-}
-
 server {
     listen 80;
     server_name pikatrading.com;
 
-    client_max_body_size 4G;
+    # Increase logging for debugging
+    error_log /var/log/nginx/pikatrading-error.log debug;
     access_log /var/log/nginx/pikatrading-access.log;
-    error_log /var/log/nginx/pikatrading-error.log;
+
+    client_max_body_size 4G;
 
     location /static/ {
         alias /code/pikatrading/static/;
@@ -19,13 +17,20 @@ server {
     }
 
     location / {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
+        include uwsgi_params;
+        uwsgi_pass unix:///code/run/uwsgi.sock;
+        uwsgi_read_timeout 300;
+        uwsgi_send_timeout 300;
+        
+        # Add debug headers
+        add_header X-Debug-Message "Passing to uWSGI" always;
+        
+        # Add error handling
+        error_page 502 /502.html;
+    }
 
-        if (!-f $request_filename) {
-            proxy_pass http://pikatrading_app_server;
-            break;
-        }
+    # Custom error pages
+    location = /502.html {
+        return 502 "Bad Gateway - uWSGI connection failed";
     }
 }
