--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build: .
     user: "1000:33"  # Run as uwsgi:www-data
     command: ["/code/wait-for-it.sh", "db:5432", "--",
-            "uwsgi", "--ini", "/code/config/uwsgi/uwsgi.ini"]
+            "uwsgi", "--ini", "/code/config/uwsgi/uwsgi.ini", "--logger", "file:/dev/stdout"]
 
     restart: always
     volumes:
@@ -28,6 +28,8 @@ services:
       - POSTGRES_PASSWORD=postgres
       - PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
       - DISPLAY=:99
+      - PYTHONUNBUFFERED=1
+      - DJANGO_LOG_LEVEL=DEBUG
       
     depends_on:
       - db
