--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     restart: always
     volumes:
       - ./pikatrading/media:/code/pikatrading/media:rw
-      - /code/run
       - ./pikatrading/static:/code/pikatrading/static:rw
+      - socket-data:/code/run:rw
     environment:
       - PYTHONPATH=/code/pikatrading
       - DJANGO_SETTINGS_MODULE=pikatrading.settings.prod
@@ -44,7 +44,7 @@ services:
       - ./config/nginx/default.conf.template:/etc/nginx/templates/default.conf.template:ro
       - ./pikatrading/static:/code/pikatrading/static:ro
       - ./pikatrading/media:/code/pikatrading/media:ro
-      - /code/run:/code/run:rw
+      - socket-data:/code/run:rw
     ports:
       - "80:80"
     command: nginx -g 'daemon off;'
@@ -85,3 +85,7 @@ services:
     depends_on:
       - rabbitmq
       - web
+
+volumes:
+  socket-data:
+    driver: local
