--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,13 +1,25 @@
 [uwsgi]
-socket = /code/run/uwsgi.sock
+http = :8000
 chdir = /code/pikatrading
 module = pikatrading.wsgi:application
 master = true
-chmod-socket = 664
+processes = 1
+vacuum = true
 uid = 1000
 gid = 33
-vacuum = true
-processes = 1
+
+# Force use HTTP instead of socket temporarily for debugging
+buffer-size = 32768
+harakiri = 60
+enable-threads = true
+
+# Logging
+disable-logging = false
+log-4xx = true
+log-5xx = true
+log-slow = true
+log-date = true
+logto = /dev/stdout
 
 # Debug settings
 py-autoreload = 1
