--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -28,13 +28,16 @@ server {
     }
 
     location / {
-        include uwsgi_params;
-        uwsgi_pass unix:///code/run/uwsgi.sock;
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Increased timeouts
-        uwsgi_read_timeout 300;
-        uwsgi_send_timeout 300;
-        uwsgi_connect_timeout 60;
+        # Timeouts
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_read_timeout 300;
         
         # Debug headers
         add_header X-Debug-Message "Passing to uWSGI" always;
