--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,8 +1,9 @@
 [uwsgi]
-http = :8000
+http = 0.0.0.0:8000
 chdir = /code/pikatrading
 module = pikatrading.wsgi:application
 master = true
+die-on-term = true
 processes = 1
 vacuum = true
 uid = 1000
