--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,37 +1,40 @@
 [uwsgi]
-http = 0.0.0.0:8000
+http-socket = 0.0.0.0:8000
 chdir = /code/pikatrading
 module = pikatrading.wsgi:application
 master = true
-die-on-term = true
 processes = 1
 vacuum = true
 uid = 1000
 gid = 33
 
-# Force use HTTP instead of socket temporarily for debugging
-buffer-size = 32768
+# Process settings
+die-on-term = true
 harakiri = 60
+harakiri-verbose = true
 enable-threads = true
-
-# Logging
-disable-logging = false
-log-4xx = true
-log-5xx = true
-log-slow = true
-log-date = true
-logto = /dev/stdout
+thunder-lock = true
 
 # Debug settings
 py-autoreload = 1
-buffer-size = 32768
-harakiri = 60
-enable-threads = true
+memory-report = true
+log-slow = true
+log-date = true
+log-5xx = true
+log-4xx = true
+log-micros = true
+log-master = true
+log-master-bufsize = 8192
+stats = /tmp/stats.socket
+
+# Request handling
+buffer-size = 65535
+post-buffering = 65535
+socket-timeout = 60
+http-timeout = 60
+reload-mercy = 8
+max-worker-lifetime = 3600
 
 # Logging
 disable-logging = false
-log-4xx = true
-log-5xx = true
-log-slow = true
-log-date = true
 logto = /dev/stdout
