--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -1,6 +1,13 @@
+# Disable redirect for bare IP access
+map $http_host $fixed_host {
+    "~^64\.227\.153\.163" $http_host;
+    default $http_host;
+}
+
 server {
     listen 80 default_server;
-    server_name pikatrading.com;
+    listen [::]:80 default_server;
+    server_name _;  # Accept any hostname
 
     # Enhanced logging
     error_log /var/log/nginx/error.log debug;
@@ -31,7 +38,7 @@ server {
         proxy_pass http://web:8000;
         
         # Standard proxy headers
-        proxy_set_header Host $http_host;
+        proxy_set_header Host $fixed_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
