--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,5 +1,11 @@
 [uwsgi]
-http-socket = 0.0.0.0:8000
+http-socket = :8000
+http-socket-modifier1 = 7
+http-auto-chunked = true
+http-keepalive = 75
+http-auto-gzip = true
+
+# Basic Settings
 chdir = /code/pikatrading
 module = pikatrading.wsgi:application
 master = true
@@ -8,12 +14,13 @@ vacuum = true
 uid = 1000
 gid = 33
 
-# Process settings
+# Process Management
 die-on-term = true
 harakiri = 60
 harakiri-verbose = true
 enable-threads = true
 thunder-lock = true
+max-requests = 1000
 
 # Debug settings
 py-autoreload = 1
@@ -35,6 +42,15 @@ http-timeout = 60
 reload-mercy = 8
 max-worker-lifetime = 3600
 
+# Startup Debugging
+show-config = true
+memory-report = true
+log-master = true
+log-master-bufsize = 8192
+status = :9191
+
 # Logging
+log-timestamp = true
+log-maxsize = 100000000
 disable-logging = false
 logto = /dev/stdout
