--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,15 +1,17 @@
 [uwsgi]
-http-socket = :8000
-http-socket-modifier1 = 7
-http-auto-chunked = true
-http-keepalive = 75
-http-auto-gzip = true
-
-# Basic Settings
-chdir = /code/pikatrading
+# Basic HTTP settings
+http = :8000
+env = DJANGO_SETTINGS_MODULE=pikatrading.settings.prod
 module = pikatrading.wsgi:application
 master = true
 processes = 1
+
+# App directory
+chdir = /code/pikatrading
+pythonpath = /code/pikatrading
+
+# Enable master process debugging
+master-fifo = /tmp/uwsgi-fifo
 vacuum = true
 uid = 1000
 gid = 33
@@ -42,15 +44,20 @@ http-timeout = 60
 reload-mercy = 8
 max-worker-lifetime = 3600
 
-# Startup Debugging
-show-config = true
+# Debug settings
+py-autoreload = 1
 memory-report = true
 log-master = true
 log-master-bufsize = 8192
 status = :9191
+stats = :1717
+stats-http = true
 
-# Logging
-log-timestamp = true
-log-maxsize = 100000000
+# Verbose logging
+log-encoded-vars = true
+log-x-forwarded-for = true
+log-zero = true
+log-slow = true
+log-ioerror = true
 disable-logging = false
 logto = /dev/stdout
