--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -1,15 +1,17 @@
-# Disable redirect for bare IP access
-map $http_host $fixed_host {
-    "~^64\.227\.153\.163" $http_host;
-    default $http_host;
+# Redirect HTTPS to HTTP temporarily
+server {
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server;
+    ssl_reject_handshake on;
+    return 301 http://$host$request_uri;
 }
 
 server {
     listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name _;  # Accept any hostname
+    listen [::]:80 default_server ipv6only=on;
+    server_name _;
 
-    # Enhanced logging
+    # Debug logging
     error_log /var/log/nginx/error.log debug;
     access_log /var/log/nginx/access.log combined buffer=512k flush=1s;
 
@@ -38,9 +40,10 @@ server {
         proxy_pass http://web:8000;
         
         # Standard proxy headers
-        proxy_set_header Host $fixed_host;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         
         # WebSocket support
