--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,6 +1,7 @@
 [uwsgi]
-# Basic HTTP settings
-http = :8000
+# Socket settings
+socket = /code/run/uwsgi.sock
+chmod-socket = 666
 env = DJANGO_SETTINGS_MODULE=pikatrading.settings.prod
 module = pikatrading.wsgi:application
 master = true
@@ -10,9 +11,7 @@ processes = 1
 chdir = /code/pikatrading
 pythonpath = /code/pikatrading
 
-# Enable master process debugging
-master-fifo = /tmp/uwsgi-fifo
-vacuum = true
+# User and group
 uid = 1000
 gid = 33
 
@@ -24,18 +23,6 @@ enable-threads = true
 thunder-lock = true
 max-requests = 1000
 
-# Debug settings
-py-autoreload = 1
-memory-report = true
-log-slow = true
-log-date = true
-log-5xx = true
-log-4xx = true
-log-micros = true
-log-master = true
-log-master-bufsize = 8192
-stats = /tmp/stats.socket
-
 # Request handling
 buffer-size = 65535
 post-buffering = 65535
@@ -44,20 +31,27 @@ http-timeout = 60
 reload-mercy = 8
 max-worker-lifetime = 3600
 
-# Debug settings
+# Debug and logging settings
 py-autoreload = 1
 memory-report = true
+log-date = true
+log-5xx = true
+log-4xx = true
+log-micros = true
 log-master = true
 log-master-bufsize = 8192
-status = :9191
-stats = :1717
-stats-http = true
-
-# Verbose logging
-log-encoded-vars = true
-log-x-forwarded-for = true
-log-zero = true
+logger = stdio
+log-reopen = true
 log-slow = true
 log-ioerror = true
 disable-logging = false
-logto = /dev/stdout
+
+# Stats
+stats = :1717
+stats-http = true
+
+# Development settings
+vacuum = true
+
+# Health check
+route = ^/health$ rewrite:SCRIPT_NAME=/health
