--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     volumes:
       - ./pikatrading/media:/code/pikatrading/media:rw
       - ./pikatrading/static:/code/pikatrading/static:rw
+      - uwsgi_sock:/code/run
     expose:
       - "8000"
       - "9191"
@@ -39,11 +40,11 @@ services:
     depends_on:
       - db
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health || curl -f http://localhost:1717"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+      test: ["CMD", "test", "-S", "/code/run/uwsgi.sock"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
     # Add these capabilities for Playwright
     cap_add:
       - SYS_ADMIN
@@ -55,6 +56,7 @@ services:
       - ./config/nginx/default.conf.template:/etc/nginx/templates/default.conf.template:ro
       - ./pikatrading/static:/code/pikatrading/static:ro
       - ./pikatrading/media:/code/pikatrading/media:ro
+      - uwsgi_sock:/code/run:ro
     ports:
       - "80:80"
     command: nginx -g 'daemon off;'
@@ -95,3 +97,6 @@ services:
     depends_on:
       - rabbitmq
       - web
+
+volumes:
+ uwsgi_sock:
