--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -1,28 +1,24 @@
-# Redirect HTTPS to HTTP temporarily
+# HTTPS Server
 server {
     listen 443 ssl default_server;
     listen [::]:443 ssl default_server;
-    ssl_reject_handshake on;
-    return 301 http://$host$request_uri;
-}
-
-server {
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
     server_name _;
 
-    # Debug logging
-    error_log /var/log/nginx/error.log debug;
-    access_log /var/log/nginx/access.log combined buffer=512k flush=1s;
-
-    client_max_body_size 4G;
+    ssl_certificate /code/pikatrading/ssl/pikatrading.crt;
+    ssl_certificate_key /code/pikatrading/ssl/pikatrading.key;
     
-    # Health check endpoint
-    location = /health {
-        access_log off;
-        add_header Content-Type text/plain;
-        return 200 'healthy\n';
-    }
+    # SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    
+    # HSTS
+    add_header Strict-Transport-Security "max-age=63072000" always;
+    
+    client_max_body_size 4G;
 
     location /static/ {
         alias /code/pikatrading/static/;
@@ -47,34 +43,32 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # WebSocket support
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
         # Timeouts
         proxy_connect_timeout 300s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
-        
-        # Debug headers
-        add_header X-Debug-Message "Proxying to uWSGI" always;
-        add_header X-Backend-Server "web:8000" always;
-        
-        # Buffering
-        proxy_buffering on;
-        proxy_buffer_size 128k;
-        proxy_buffers 4 256k;
-        proxy_busy_buffers_size 256k;
-        
-        # Error handling
-        error_page 502 504 = @fallback;
-        proxy_intercept_errors on;
+    }
+}
+
+# HTTP Server - Redirect to HTTPS except for health check
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server ipv6only=on;
+    server_name _;
+
+    # Debug logging
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log combined buffer=512k flush=1s;
+
+    # Health check endpoint - keep accessible on HTTP
+    location = /health {
+        access_log off;
+        add_header Content-Type text/plain;
+        return 200 'healthy\n';
     }
 
-    # Fallback handler
-    location @fallback {
-        add_header Content-Type application/json;
-        return 502 '{"error": "Bad Gateway", "message": "Failed to connect to backend server", "backend": "web:8000"}';
+    # Redirect all other traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
     }
 }
