--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -2,10 +2,10 @@
 server {
     listen 443 ssl default_server;
     listen [::]:443 ssl default_server;
-    server_name _;
+    server_name pikatrading.com www.pikatrading.com;
 
-    ssl_certificate /code/pikatrading/ssl/pikatrading.crt;
-    ssl_certificate_key /code/pikatrading/ssl/pikatrading.key;
+    ssl_certificate /etc/letsencrypt/live/pikatrading.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pikatrading.com/privkey.pem;
     
     # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -61,6 +61,11 @@ server {
     access_log /var/log/nginx/access.log combined buffer=512k flush=1s;
 
     # Health check endpoint - keep accessible on HTTP
+    # Certbot challenges
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location = /health {
         access_log off;
         add_header Content-Type text/plain;
