--- a/config/nginx/default.conf.template
+++ b/config/nginx/default.conf.template
@@ -1,23 +1,24 @@
-# HTTPS Server
+# HTTP Server
 server {
-    listen 443 ssl default_server;
-    listen [::]:443 ssl default_server;
+    listen 80;
+    listen [::]:80;
     server_name pikatrading.com www.pikatrading.com;
 
-    ssl_certificate /etc/letsencrypt/live/pikatrading.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/pikatrading.com/privkey.pem;
-    
-    # SSL configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_tickets off;
-    
-    # HSTS
-    add_header Strict-Transport-Security "max-age=63072000" always;
-    
+    # Debug logging
+    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log combined buffer=512k flush=1s;
+
+    # Certbot challenges
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location = /health {
+        access_log off;
+        add_header Content-Type text/plain;
+        return 200 'healthy\n';
+    }
+
     client_max_body_size 4G;
 
     location /static/ {
@@ -47,33 +48,5 @@ server {
         proxy_connect_timeout 300s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
-    }
-}
-
-# HTTP Server - Redirect to HTTPS except for health check
-server {
-    listen 80 default_server;
-    listen [::]:80 default_server ipv6only=on;
-    server_name _;
-
-    # Debug logging
-    error_log /var/log/nginx/error.log debug;
-    access_log /var/log/nginx/access.log combined buffer=512k flush=1s;
-
-    # Health check endpoint - keep accessible on HTTP
-    # Certbot challenges
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location = /health {
-        access_log off;
-        add_header Content-Type text/plain;
-        return 200 'healthy\n';
-    }
-
-    # Redirect all other traffic to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
     }
 }
