--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -2,6 +2,8 @@
 # Socket settings
 socket = /code/run/uwsgi.sock
 chmod-socket = 666
+# HTTP port for Kubernetes health checks
+http = :8080
 env = DJANGO_SETTINGS_MODULE=pikatrading.settings.prod
 module = pikatrading.wsgi:application
 master = true
@@ -53,5 +55,6 @@ stats-http = true
 # Development settings
 vacuum = true
 
-# Health check
+# Health check endpoints
 route = ^/health$ rewrite:SCRIPT_NAME=/health
+route-if = equal:${REQUEST_URI};/health return:200 OK
