--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - uwsgi_sock:/code/run
     expose:
       - "8000"
+      - "8080"
       - "9191"
       - "1717"
     ports:
@@ -40,7 +41,7 @@ services:
     depends_on:
       - db
     healthcheck:
-      test: ["CMD", "test", "-S", "/code/run/uwsgi.sock"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
