--- a/config/uwsgi/uwsgi.ini
+++ b/config/uwsgi/uwsgi.ini
@@ -1,13 +1,16 @@
 [uwsgi]
-# Socket settings
+# HTTP and Socket settings
+http = :8080
+http-keepalive = true
+http-auto-chunked = true
 socket = /code/run/uwsgi.sock
 chmod-socket = 666
-# HTTP port for Kubernetes health checks
-http = :8080
+
+# Application configuration
 env = DJANGO_SETTINGS_MODULE=pikatrading.settings.prod
 module = pikatrading.wsgi:application
 master = true
-processes = 1
+processes = 2
 
 # App directory
 chdir = /code/pikatrading
@@ -19,11 +22,13 @@ gid = 33
 
 # Process Management
 die-on-term = true
-harakiri = 60
+harakiri = 30
 harakiri-verbose = true
 enable-threads = true
 thunder-lock = true
 max-requests = 1000
+worker-reload-mercy = 30
+reload-on-rss = 128
 
 # Request handling
 buffer-size = 65535
@@ -55,6 +60,8 @@ stats-http = true
 # Development settings
 vacuum = true
 
-# Health check endpoints
-route = ^/health$ rewrite:SCRIPT_NAME=/health
+# Health check configuration
+check-static = /health
 route-if = equal:${REQUEST_URI};/health return:200 OK
+route = ^/health$ dowhile:1
+route = ^/health$ break:200 OK
