--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,11 @@ services:
   web:
     build: .
     user: "1000:33"  # Run as uwsgi:www-data
-    command: ["/code/wait-for-it.sh", "db:5432", "--",
-            "uwsgi", "--ini", "/code/config/uwsgi/uwsgi.ini", "--logger", "file:/dev/stdout", "--log-master"]
+    command: >
+      /bin/sh -c "
+        /code/wait-for-it.sh db:5432 --timeout=30 --strict &&
+        uwsgi --ini /code/config/uwsgi/uwsgi.ini --logger file:/dev/stdout --log-master --die-on-term
+      "
 
     restart: always
     volumes:
@@ -39,13 +42,14 @@ services:
       - DJANGO_LOG_LEVEL=DEBUG
       
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+      test: ["CMD-SHELL", "curl -f http://localhost:8080/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
     # Add these capabilities for Playwright
     cap_add:
       - SYS_ADMIN
